--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
-  <link rel="stylesheet" href="./css/LXY.css">
+  <link rel="stylesheet" href="./css/Lin.css">
   <link rel="shortcut icon" href="./img/favicon.ico">
   <title>生日快乐吖！~</title>
   <script src="./js/main.js"></script>
